# desafio-blog-imersao-fullcycle

./: README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
base/: manager.py  models.py  views.py
base/templates/base/: page.html  pagination.html
blog/: asgi.py  settings.py  urls.py
core/: admin.py  models.py  views.py
core/migrations/: 0001_initial.py
core/templates/core/: posts.html
