[tool.poetry]
name = "desafio-blog-imersao-fullcycle"
version = "0.1.0"
description = ""
authors = ["menegasse <menegassehugo12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.2"
gunicorn = "^23.0.0"
uvicorn = "^0.32.0"
whitenoise = {extras = ["brotli"], version = "^6.8.2"}
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
